ADD　   : UI.h UI.cpp UPDATE : All Files ADD      : Comment to All Files

--- a/Test-DXLib-2/Test-DXLib-2.vcxproj
+++ b/Test-DXLib-2/Test-DXLib-2.vcxproj
@@ -155,11 +155,13 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="myfuncs.cpp" />
+    <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Chara.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="myfuncs.h" />
+    <ClInclude Include="UI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
