ADD      :Data.cpp Data.h Enemy.cpp UPDATE :myfunbcs.cpp Chara.h main.cpp myfunbcs.h DETAIL   : you can select "U Chack Data"

--- a/Test-DXLib-2/Test-DXLib-2.vcxproj
+++ b/Test-DXLib-2/Test-DXLib-2.vcxproj
@@ -152,6 +152,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Chara.cpp" />
+    <ClCompile Include="Data.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="myfuncs.cpp" />
@@ -159,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Chara.h" />
+    <ClInclude Include="Data.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="myfuncs.h" />
     <ClInclude Include="UI.h" />
