UPDATE : game.cpp DETAIL   :  you can select COMMAND

--- a/Test-DXLib-2/Test-DXLib-2.vcxproj
+++ b/Test-DXLib-2/Test-DXLib-2.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Chara.cpp" />
+    <ClCompile Include="command.cpp" />
     <ClCompile Include="Data.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="game.cpp" />
