--- a/Test-DXLib-2/Test-DXLib-2.vcxproj.filters
+++ b/Test-DXLib-2/Test-DXLib-2.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Enemy.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="command.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="myfuncs.h">
